Update ignored files

--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,15 @@
-config/
-!config/fish
-!config/nvim
-!config/omf
-!config/yarn
+/config/*
+!config/fish/
+!config/fish/*
+!config/nvim/
+!config/nvim/*
+!config/omf/
+!config/omf/*
+!config/yarn/
+!config/yarn/*
 config/fish/fish_variables
 config/nvim/.netrwhist
+config/fish/fishd.kavinvin
 .DS_Store
 node_modules/
 ptpython/history
