--- a/.gitignore
+++ b/.gitignore
@@ -9,7 +9,7 @@
 !config/yarn/*
 config/fish/fish_variables
 config/nvim/.netrwhist
-config/fish/fishd.kavinvin
+config/fish/fishd.*
 .DS_Store
 node_modules/
 ptpython/history
